--- a/Revamedia/package.json
+++ b/Revamedia/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.1.3",
     "gsap": "^3.10.4",
     "jshint": "^2.13.4",
+    "jwt-decode": "^3.1.2",
     "ng-validate-equal": "^6.0.1",
     "ngx-color": "^7.3.3",
     "ngx-cookie-service": "^13.2.1",
