--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,14 @@
             <artifactId>javase</artifactId>
             <version>3.2.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.235</version>
+        </dependency>
+
+
 
     </dependencies>
 
