--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,10 @@
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.12.235</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
 
     </dependencies>
