--- a/buildspec-rev.yml
+++ b/buildspec-rev.yml
@@ -20,7 +20,7 @@ phases:
   build:
     commands:
       - echo ============================build================================
-      - mvn package -q -DskipTests #could remove skip
+      - mvn package -q #could remove skip
       - cd Revamedia/
       # - pwd
       # - ls -al
